# frontend/src/client/openapi/workspace.openapi.json
@@ -4080,6 +4080,52 @@
       }
     },
     "/api/v2/agents/tasks/{task_id}": {
+      "delete": {
+        "operationId": "delete_agent_task_api_v2_agents_tasks__task_id__delete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "task_id",
+            "required": true,
+            "schema": {
+              "title": "Task Id",
+              "type": "string"
+            }
+          },
+          {
+            "in": "header",
+            "name": "authorization",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Authorization"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Delete Agent Task"
+      },
       "get": {
         "operationId": "get_agent_task_api_v2_agents_tasks__task_id__get",
         "parameters": [
